add endpoint de cadastro de aniversario e outras coisas